Fix few alignments in Dashboard module (#72)
* Connect to APIs and fix todos in Dashboard module

* Fix content

--- a/src/app/integration/main/dashboard/dashboard.component.scss
+++ b/src/app/integration/main/dashboard/dashboard.component.scss
@@ -230,9 +230,7 @@ h2 {
 ::ng-deep .mat-tooltip {
   background: #2C304E;
   border-radius: 2px;
-  white-space: nowrap;
   color: #FFFFFF;
-  min-width: 440px;
 }
 
 .loader {
