--- a/src/app/shared/components/dashboard/dashboard-header-section/dashboard-header-section.component.scss
+++ b/src/app/shared/components/dashboard/dashboard-header-section/dashboard-header-section.component.scss
@@ -12,3 +12,9 @@
     background: #FFFFFF;
   }
 }
+
+::ng-deep .mat-tooltip {
+  background: #2C304E;
+  border-radius: 2px;
+  color: #FFFFFF;
+}
