--- a/src/app/shared/components/dashboard/dashboard-qbo-error-dialog/dashboard-qbo-error-dialog.component.scss
+++ b/src/app/shared/components/dashboard/dashboard-qbo-error-dialog/dashboard-qbo-error-dialog.component.scss
@@ -54,3 +54,9 @@
     padding-left: 34px;
   }
 }
+
+::ng-deep .mat-tooltip {
+  background: #2C304E;
+  border-radius: 2px;
+  color: #FFFFFF;
+}
